--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   "dependencies": {
     "react": "15.2.1",
     "react-native": "0.31.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-loader": "^1.4.1",
+    "eslint-plugin-import": "^1.10.3",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.2.2"
   }
 }
