--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "reactotron": "node_modules/.bin/reactotron"
   },
   "dependencies": {
+    "apisauce": "^0.3.0",
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-redux": "^4.4.5",
@@ -19,6 +21,7 @@
     "eslint-loader": "^1.4.1",
     "eslint-plugin-import": "^1.10.3",
     "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.2.2"
+    "eslint-plugin-react": "^5.2.2",
+    "reactotron": "^0.9.0"
   }
 }
