--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apisauce": "^0.3.0",
+    "immutable": "^3.8.1",
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-redux": "^4.4.5",
