--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "immutable": "^3.8.1",
     "react": "15.2.1",
     "react-native": "0.31.0",
+    "react-native-router-flux": "^3.34.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1"
