--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-native-router-flux": "^3.34.0",
+    "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1"
