--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   ],
   "rules": {
     "comma-dangle": 0,
+    "arrow-body-style": [2, "as-needed", { "requireReturnForObjectLiteral": true }],
     "react/jsx-curly-spacing": [2, "always", {"spacing": {
         "objectLiterals": "never"
     }}]
