--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "apisauce": "^0.3.0",
     "react": "15.2.1",
     "react-native": "0.31.0",
+    "react-native-device-info": "^0.9.3",
+    "react-native-i18n": "0.0.8",
     "react-native-router-flux": "^3.34.0",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
