--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
+    "redux-saga": "^0.11.0",
     "reduxsauce": "^0.1.0",
     "seamless-immutable": "^6.1.1"
   },
