--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-saga": "^0.11.0",
+    "redux-storage": "^4.1.0",
+    "redux-storage-engine-reactnativeasyncstorage": "^1.0.1",
     "reduxsauce": "^0.1.0",
     "seamless-immutable": "^6.1.1"
   },
