--- a/.eslintrc
+++ b/.eslintrc
@@ -10,5 +10,8 @@
     "react/jsx-curly-spacing": [2, "always", {"spacing": {
         "objectLiterals": "never"
     }}]
+  },
+  "globals": {
+    "__DEV__": true
   }
 }
