--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "rules": {
     "comma-dangle": 0,
     "arrow-body-style": 0,
+    "no-underscore-dangle": 0,
     "react/jsx-curly-spacing": [2, "always", {"spacing": {
         "objectLiterals": "never"
     }}]
