--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "node_modules/.bin/ava",
-    "test:watch": "node_modules/.bin/ava --watch",
-    "coverage": "node_modules/.bin/nyc ava",
+    "test": "NODE_ENV=test node_modules/.bin/ava",
+    "test:watch": "NODE_ENV=test node_modules/.bin/ava --watch",
+    "coverage": "NODE_ENV=test node_modules/.bin/nyc ava",
     "tron": "node_modules/.bin/reactotron"
   },
   "ava": {
@@ -21,6 +21,16 @@
       "react-native-mock/mock",
       "./tests/setup.js"
     ]
+  },
+  "nyc": {
+    "include": [
+      "app/**/*.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
   },
   "dependencies": {
     "apisauce": "^0.3.0",
@@ -42,6 +52,7 @@
   "devDependencies": {
     "ava": "^0.16.0",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-istanbul": "^1.0.3",
     "enzyme": "^2.4.1",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
@@ -50,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.2.2",
     "mockery": "^1.7.0",
+    "nyc": "^7.1.0",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
     "reactotron": "^0.9.0"
