--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test node_modules/.bin/ava",
     "test:watch": "NODE_ENV=test node_modules/.bin/ava --watch",
     "coverage": "NODE_ENV=test node_modules/.bin/nyc ava",
-    "tron": "node_modules/.bin/reactotron"
+    "tron": "node_modules/.bin/reactotron",
+    "ios": "react-native run-ios"
   },
   "ava": {
     "babel": "inherit",
