--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-native-device-info": "^0.9.3",
+    "react-native-fabric": "^0.3.0",
     "react-native-i18n": "0.0.8",
     "react-native-router-flux": "^3.34.0",
     "react-native-vector-icons": "^2.0.3",
@@ -48,7 +49,8 @@
     "redux-storage": "^4.1.0",
     "redux-storage-engine-reactnativeasyncstorage": "^1.0.1",
     "reduxsauce": "^0.1.0",
-    "seamless-immutable": "^6.1.1"
+    "seamless-immutable": "^6.1.1",
+    "stacktrace-js": "^1.3.1"
   },
   "devDependencies": {
     "ava": "^0.16.0",
