Add command to completely reset all development caches

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:watch": "NODE_ENV=test node_modules/.bin/ava --watch",
     "coverage": "NODE_ENV=test node_modules/.bin/nyc ava",
     "tron": "node_modules/.bin/reactotron",
-    "ios": "react-native run-ios"
+    "ios": "react-native run-ios",
+    "clear:cache": "rm -rf node_modules && watchman watch-del-all && npm install && npm start --reset-cache"
   },
   "ava": {
     "babel": "inherit",
