--- a/ios/ShelfieApp/Info.plist
+++ b/ios/ShelfieApp/Info.plist
@@ -59,6 +59,7 @@
 		<string>MaterialIcons.ttf</string>
 		<string>Octicons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Lato-Black.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
