--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,12 @@
     "comma-dangle": 0,
     "arrow-body-style": 0,
     "no-underscore-dangle": 0,
-    "react/jsx-curly-spacing": [2, "always", {"spacing": {
+    "react/jsx-curly-spacing": [2, "always", {
+      "spacing": {
         "objectLiterals": "never"
-    }}]
+      },
+      "allowMultiline": true
+    }]
   },
   "globals": {
     "__DEV__": true
