--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native": "0.31.0",
     "react-native-device-info": "^0.9.3",
     "react-native-fabric": "^0.3.0",
+    "react-native-keyboard-spacer": "^0.3.0",
     "react-native-router-flux": "^3.34.0",
     "react-native-svg": "^4.1.1",
     "react-native-vector-icons": "^2.0.3",
