--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-native-keyboard-spacer": "^0.3.0",
     "react-native-keychain": "^0.3.2",
     "react-native-router-flux": "^3.34.0",
-    "react-native-svg": "^4.1.1",
+    "react-native-svg": "4.1.1",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
