--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
         "objectLiterals": "never"
       },
       "allowMultiline": true
-    }]
+    }],
+    "global-require": 0
   },
   "globals": {
     "__DEV__": true
