--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,15 @@ android/keystores/debug.keystore
 
 # Coverage reports
 .nyc_output
+
+# fastlane specific
+fastlane/report.xml
+
+# deliver temporary files
+fastlane/Preview.html
+
+# snapshot generated screenshots
+fastlane/screenshots
+
+# scan temporary files
+fastlane/test_output
