--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "instrument": false
   },
   "dependencies": {
+    "raven-js": "^3.7.0",
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-native-device-info": "^0.9.3",
