--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-video": "^0.9.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-actions": "https://registry.npmjs.org/redux-actions/-/redux-actions-0.10.1.tgz",
     "redux-logger": "^2.6.1",
     "redux-saga": "^0.11.0",
     "redux-storage": "^4.1.0",
