--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "instrument": false
   },
   "dependencies": {
-    "qs": "https://registry.npmjs.org/qs/-/qs-4.0.0.tgz",
+    "lodash": "^4.16.4",
+    "qs": "^4.0.0",
     "raven-js": "^3.7.0",
     "react": "15.2.1",
     "react-native": "0.31.0",
@@ -49,7 +50,7 @@
     "react-native-video": "^0.9.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-actions": "https://registry.npmjs.org/redux-actions/-/redux-actions-0.10.1.tgz",
+    "redux-actions": "^0.10.1",
     "redux-logger": "^2.6.1",
     "redux-saga": "^0.11.0",
     "redux-storage": "^4.1.0",
