--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-native-device-info": "^0.9.3",
+    "react-native-drawer": "^2.3.0",
     "react-native-fabric": "^0.3.0",
     "react-native-keyboard-spacer": "^0.3.0",
     "react-native-keychain": "^0.3.2",
