--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ava": "^0.16.0",
     "babel-eslint": "^6.1.2",
     "babel-plugin-istanbul": "^1.0.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "enzyme": "^2.4.1",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
