--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fbsdk')
+    compile project(':react-native-fabric')
     compile project(':react-native-video')
     compile project(':react-native-keychain')
     compile project(':react-native-svg')
