--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-keyboard-spacer": "^0.3.0",
     "react-native-keychain": "^0.3.2",
     "react-native-router-flux": "^3.34.0",
+    "react-native-spinkit": "^0.1.3",
     "react-native-svg": "4.1.1",
     "react-native-vector-icons": "^2.0.3",
     "react-native-video": "^0.9.0",
