--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "NODE_ENV=test node_modules/.bin/ava",
     "test:watch": "NODE_ENV=test node_modules/.bin/ava --watch",
     "coverage": "NODE_ENV=test node_modules/.bin/nyc ava",
-    "tron": "node_modules/.bin/reactotron",
     "ios": "react-native run-ios",
     "clear:cache": "rm -rf node_modules && watchman watch-del-all && npm install && npm start --reset-cache"
   },
@@ -77,7 +76,6 @@
     "mockery": "^1.7.0",
     "nyc": "^7.1.0",
     "react-addons-test-utils": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "reactotron": "^0.9.0"
+    "react-dom": "^15.2.1"
   }
 }
