--- a/ios/Shelfie/Info.plist
+++ b/ios/Shelfie/Info.plist
@@ -59,5 +59,7 @@
     </array>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>CodePushDeploymentKey</key>
+    <string>eGX3efbIfCMZyA-L6SHFFVqkpeuONJFerph8G</string>
   </dict>
 </plist>
