--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.39.0",
+    "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
     "react-native-keyboard-spacer": "^0.3.1",
@@ -45,6 +46,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["app/assets"]
+    "assets": [
+      "app/assets"
+    ]
   }
 }
