--- a/ios/Shelfie/Info.plist
+++ b/ios/Shelfie/Info.plist
@@ -22,6 +22,8 @@
 	<string>3</string>
 	<key>CodePushDeploymentKey</key>
 	<string>eGX3efbIfCMZyA-L6SHFFVqkpeuONJFerph8G</string>
+  <key>ITSAppUsesNonExemptEncryption</key>
+  <false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
