--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf node_modules && watchman watch-del-all && npm install && npm start -- --reset-cache"
   },
   "dependencies": {
-    "raven-js": "^3.7.0",
+    "raven-js": "git+https://git@github.com/kevinvandijk/raven-js.git",
     "react": "15.4.2",
     "react-native": "0.39.0",
     "react-native-code-push": "^1.16.1-beta",
