--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
   "rules": {
     "comma-dangle": 0,
     "arrow-body-style": 0,
+    "arrow-parens": [2, "always"],
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "no-underscore-dangle": 0,
     "react/jsx-curly-spacing": [2, "always", {
       "spacing": {
@@ -14,6 +16,7 @@
       },
       "allowMultiline": true
     }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "global-require": 0
   },
   "globals": {
