--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "ios": "node_modules/.bin/react-native run-ios",
     "test": "jest",
     "clean": "rm -rf node_modules && watchman watch-del-all && npm install && npm start -- --reset-cache",
     "codepush": "./scripts/code-push.sh"
