--- a/ios/Shelfie/Info.plist
+++ b/ios/Shelfie/Info.plist
@@ -52,6 +52,7 @@
       <string>Zocial.ttf</string>
       <string>Lato-Black.ttf</string>
       <string>Lato-Regular.ttf</string>
+      <string>Poppins-Medium.ttf</string>
     </array>
     <key>UIRequiredDeviceCapabilities</key>
     <array>
