--- a/ios/Shelfie/Info.plist
+++ b/ios/Shelfie/Info.plist
@@ -67,5 +67,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Needs microphone access to detect Chromecasts with Google Cast SDK</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Needs bluetooth access to detect Chromecasts with Google Cast SDK</string>
 </dict>
 </plist>
