--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "codepush": "./scripts/code-push.sh"
   },
   "dependencies": {
+    "jwt-decode": "^2.1.0",
     "lodash": "^4.17.4",
     "raven-js": "git+https://git@github.com/kevinvandijk/raven-js.git",
     "react": "15.4.2",
