--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   ],
   "rules": {
     "comma-dangle": 0,
+    "no-constant-condition": 0,
     "arrow-body-style": 0,
     "arrow-parens": [2, "always"],
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
