--- a/.gitignore
+++ b/.gitignore
@@ -34,24 +34,20 @@ local.properties
 #
 node_modules/
 npm-debug.log
+yarn-error.log
 
 # BUCK
 buck-out/
 \.buckd/
-android/app/libs
-android/keystores/debug.keystore
+*.keystore
 
-# Coverage reports
-.nyc_output
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
 
-# fastlane specific
 fastlane/report.xml
-
-# deliver temporary files
 fastlane/Preview.html
-
-# snapshot generated screenshots
 fastlane/screenshots
-
-# scan temporary files
-fastlane/test_output
