--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "moment": "^2.18.0",
     "raven-js": "git+https://git@github.com/kevinvandijk/raven-js.git",
     "react": "15.4.2",
-    "react-native": "0.39.0",
+    "react-native": "0.42.0",
     "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
     "react-native-google-cast": "^1.2.0",
-    "react-native-keychain": "^0.3.2",
+    "react-native-keychain": "^1.2.0",
     "react-native-router-flux": "^3.37.0",
-    "react-native-spinkit": "0.1.5",
-    "react-native-vector-icons": "^3.0.0",
-    "react-native-video": "github:react-native-community/react-native-video#9bcf70cbb513402622bc114f93da751c28f15303",
+    "react-native-spinkit": "^1.0.2",
+    "react-native-vector-icons": "^4.0.1",
+    "react-native-video": "^1.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
