--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
     "raven-js": "git+https://git@github.com/kevinvandijk/raven-js.git",
-    "react": "15.4.2",
-    "react-native": "0.42.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.43.1",
     "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
