Add Android support (#6)
* Upgrade React Native to 0.42

* Start with support for Android

* Provide keychain with a noop username because android devices require this

* Upgrade React Native to 0.43.1

* Set label on 'return' button for Android devices

* Fix underlines for authentication screen on Android

* Improve authentication screen styling for Android

* Add yarn script to launch Android version

* Check for REFRESH on router to make keyboard loose focus after login on Android as well

* Add platform specific ways of using the Poppins font, needs refactoring, works for Android now

* Update react-native-video to latest commit in master so video autoplay is fixed for Android

* Set the right color for slider thumb on Android

* Adjust padding for slightly smaller Android navbar

* Set minimum and maximum track color for Android

* Add slightly different padding for sidemenu in android

* Make menu burger icon transparent so Android can make it fade into the navbar

* Add a bit of padding to list header

* Add app icon for Android

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "ios": "node_modules/.bin/react-native run-ios",
+    "android": "node_modules/.bin/react-native run-android",
     "test": "jest",
     "clean": "rm -rf node_modules && watchman watch-del-all && npm install && npm start -- --reset-cache",
     "codepush": "./scripts/code-push.sh"
@@ -14,17 +15,17 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
     "raven-js": "git+https://git@github.com/kevinvandijk/raven-js.git",
-    "react": "15.4.2",
-    "react-native": "0.39.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.43.1",
     "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
     "react-native-google-cast": "^1.2.0",
-    "react-native-keychain": "^0.3.2",
+    "react-native-keychain": "^1.2.0",
     "react-native-router-flux": "^3.37.0",
-    "react-native-spinkit": "0.1.5",
-    "react-native-vector-icons": "^3.0.0",
-    "react-native-video": "github:react-native-community/react-native-video#9bcf70cbb513402622bc114f93da751c28f15303",
+    "react-native-spinkit": "^1.0.2",
+    "react-native-vector-icons": "^4.0.1",
+    "react-native-video": "git+https://git@github.com/react-native-community/react-native-video#c45f5f5b38d516ceb0d8e1421cbe3946e475e069",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
