Fix Chromecast support for iOS and Android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-google-cast')
     compile project(':react-native-keychain')
     compile project(':react-native-vector-icons')
     compile project(':react-native-spinkit')
