--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,8 +136,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile 'com.google.android.gms:play-services-cast:9.4.0'
-    compile 'com.android.support:mediarouter-v7:23.0.1'
+    compile "com.google.android.gms:play-services-cast:10.2.1"
+    compile "com.android.support:mediarouter-v7:23.0.1"
 }
 
 // Run this once to be able to run the application with BUCK
