--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
     "react-native-google-cast": "^1.3.0",
+    "react-native-keep-awake": "^2.0.4",
     "react-native-keychain": "^1.2.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-spinkit": "^1.0.2",
