--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-google-cast": "^1.3.0",
     "react-native-keep-awake": "^2.0.4",
     "react-native-keychain": "^1.2.0",
+    "react-native-linear-gradient": "^2.0.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-spinkit": "^1.0.2",
     "react-native-vector-icons": "^4.0.1",
