--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
+    "react-native-fast-image": "^0.0.10",
     "react-native-google-cast": "^1.3.0",
     "react-native-keep-awake": "^2.0.4",
     "react-native-keychain": "^1.2.0",
