--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "rules": {
     "comma-dangle": 0,
     "no-constant-condition": 0,
+    "no-use-before-define": 0,
     "arrow-body-style": 0,
     "arrow-parens": [2, "always"],
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
