--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
     "react-native-google-cast": "^1.3.0",
+    "react-native-immersive": "^0.0.5",
     "react-native-keep-awake": "^2.0.4",
     "react-native-keychain": "^1.2.0",
     "react-native-linear-gradient": "^2.0.0",
+    "react-native-orientation": "git+https://github.com/yamill/react-native-orientation.git",
     "react-native-router-flux": "^3.37.0",
     "react-native-spinkit": "^1.0.2",
     "react-native-vector-icons": "^4.0.1",
