--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-spinkit": "^1.0.2",
     "react-native-vector-icons": "^4.0.1",
     "react-native-video": "git+https://git@github.com/react-native-community/react-native-video#c45f5f5b38d516ceb0d8e1421cbe3946e475e069",
+    "react-native-volume-slider": "^0.5.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
