--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fetch-blob')
     compile project(':react-native-immersive')
     compile project(':react-native-orientation')
     compile project(':react-native-linear-gradient')
