--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
+    "react-native-fetch-blob": "^0.10.5",
     "react-native-google-cast": "^1.3.0",
+    "react-native-img-cache": "^1.4.0",
     "react-native-immersive": "^0.0.5",
     "react-native-keep-awake": "^2.0.4",
     "react-native-keychain": "^1.2.0",
