--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "jwt-decode": "^2.1.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
+    "prop-types": "^15.6.0",
     "raven-js": "^3.14.2",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.48.4",
+    "react": "16.0.0-beta.5",
+    "react-native": "0.49.0",
     "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
     "react-native-fetch-blob": "^0.10.5",
     "react-native-google-cast": "^1.3.0",
-    "react-native-image-progress": "^0.6.0",
+    "react-native-image-progress": "1.0.1",
     "react-native-img-cache": "^1.4.0",
     "react-native-immersive": "^0.0.5",
     "react-native-keep-awake": "^2.0.4",
@@ -33,7 +34,7 @@
     "react-native-router-flux": "^3.37.0",
     "react-native-spinkit": "^1.0.2",
     "react-native-vector-icons": "^4.0.1",
-    "react-native-video": "git+https://git@github.com/react-native-community/react-native-video#c45f5f5b38d516ceb0d8e1421cbe3946e475e069",
+    "react-native-video": "git+https://git@github.com/react-native-community/react-native-video#6e43701092f5f480eab8ae005a4bc729bb21b5c1",
     "react-native-volume-slider": "^0.5.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
