--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "moment": "^2.18.0",
     "prop-types": "^15.6.0",
     "raven-js": "^3.14.2",
-    "react": "16.0.0-beta.5",
-    "react-native": "0.49.0",
+    "react": "16.0.0",
+    "react-native": "0.50.0",
     "react-native-code-push": "^1.16.1-beta",
     "react-native-device-info": "^0.9.7",
     "react-native-drawer": "^2.3.0",
