--- a/ios/Shelfie/Info.plist
+++ b/ios/Shelfie/Info.plist
@@ -42,7 +42,7 @@
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Needs bluetooth access to detect Chromecasts with Google Cast SDK</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Needs microphone access to detect Chromecasts with Google Cast SDK</string>
 	<key>UIAppFonts</key>
@@ -61,6 +61,7 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
+		<string>Feather.ttf</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
