--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-spinkit": "^1.0.2",
     "react-native-vector-icons": "^4.0.1",
     "react-native-video": "git+https://git@github.com/react-native-community/react-native-video#6e43701092f5f480eab8ae005a4bc729bb21b5c1",
-    "react-native-volume-slider": "^0.5.0",
+    "react-native-volume-slider": "https://github.com/ifours/react-native-volume-slider",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
