--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-  "presets": ["react-native"],
-  "plugins": ["transform-decorators-legacy"],
+  "presets": ["babel-preset-react-native-stage-0/decorator-support"],
   "env": {
+    "development": {
+      "plugins": [
+        "transform-react-jsx-source"
+      ]
+    },
     "test": {
       "plugins": ["istanbul"]
     }
