--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-image-progress": "1.0.1",
     "react-native-img-cache": "^1.4.0",
     "react-native-immersive": "^0.0.5",
+    "react-native-iphone-x-helper": "^1.0.1",
     "react-native-keep-awake": "^2.0.4",
     "react-native-keychain": "^1.2.0",
     "react-native-linear-gradient": "^2.0.0",
